FEAT: auth jusqu a etape 3

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -8,7 +8,7 @@ security:
         app_user_provider:
             entity:
                 class: App\Entity\User
-                property: username
+                property: username # oui je sais que il faut changer mais j'ai envie de garder username Baptiste <3
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -17,6 +17,14 @@ security:
             lazy: true
             provider: app_user_provider
             custom_authenticator: App\Security\LoginFormAuthenticator
+
+            form_login:
+                login_path: app_login      # La route de ta page de login
+                check_path: app_login
+
+            custom_authenticators:
+                - App\Security\LoginFormAuthenticator
+
             logout:
                 path: app_logout
                 # where to redirect after logout
@@ -29,6 +37,8 @@ security:
                 # by default, the feature is enabled by checking a checkbox in the
                 # login form, uncomment the following line to always enable it.
                 #always_remember_me: true
+            
+            entry_point: App\Security\LoginFormAuthenticator
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -36,11 +46,15 @@ security:
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
 
+    role_hierarchy:
+        ROLE_USER: []
+        ROLE_BANNED: ~
+        ROLE_ADMIN: [ROLE_USER]
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
     security:
