--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "dependencies": {
         "@hotwired/stimulus": "^3.2.2",
-        "@symfony/stimulus-bridge": "^3.2.2"
+        "@symfony/stimulus-bridge": "^3.2.2",
+        "daisyui": "^4.12.23"
     }
 }
