--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,5 +1,7 @@
 doctrine:
     dbal:
+        options:
+            persistent: true
         url: '%env(resolve:DATABASE_URL)%'
 
         # IMPORTANT: You MUST configure your server version,
